<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="cn.nibius.signinassistant.activity.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="9"
        android:padding="5dp">

        <TextView
            android:id="@+id/text_hello"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fadeScrollbars="false"
            android:scrollbars="vertical"
            android:text="Hello World!" />
    </ScrollView>


    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_show_float_window"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/open_float_window" />

            <Button
                android:id="@+id/button_0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/test" />

            <Button
                android:id="@+id/button_open_cpu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/show_cpu" />

            <Button
                android:id="@+id/button_qq_sign"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/qq_sign" />

            <Button
                android:id="@+id/button_mi_market"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mi_market" />

        </LinearLayout>
    </HorizontalScrollView>


</LinearLayout>
